added but not changed yet

--- a/netfilix-homepage/index.html
+++ b/netfilix-homepage/index.html
@@ -1,20 +1,254 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300i,400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+    <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">
+  </head>
+  <body>
+    <nav class="navbar navbar-light p-0">
+      <div class="container-fluid px-5">
+        <a class="navbar-brand">Netflix</a>
+        <form class="d-flex">
+          <select class="form-select mx-4 text-white" aria-label="Default select example">
+            <option selected>English</option>
+            <option value="1">Español</option>
+          </select>
+          <button type="button" class="btn btn-danger top-sign-in">signin</button>
+        </form>
+      </div>
+    </nav>
+    <div class="bg-img">
+      <div class="layer">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h1>Unlimited movies, TV <br>shows and more.</h1>
+            <h3>Watch anywhere. Cancel anytime.</h3>
+            <h5>Ready to watch? Enter your email to create or restart your membership.</h5>
+          </div>
+        </div>
+        <div class="row w-100">
+          <div class="col-md-2 col-1"></div>
+          <div class="col-md-8 col-10 p-0 main-search">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="Email address">
+              <span class="input-group-text" id="basic-addon2">Get Started <i class="bi bi-chevron-right text-white"></i></span>
+            </div>
+          </div>
+          <div class="col-md-2 col-1"></div>
+        </div>
+      </div>
+    </div>
+    <section>
+      <div class="container">
+        <div class="row align-items-center reverse">
+          <div class="col-lg-6">
+            <h2>Enjoy on your TV.</h2>
+            <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+          </div>
+          <div class="col-lg-6">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="row align-items-center ">
+          <div class="col-lg-6">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg">
+          </div>
+          <div class="col-lg-6">
+            <h2>Download your shows to watch offline.</h2>
+            <p>Save your favourites easily and always have something to watch.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="row align-items-center reverse">
+          <div class="col-lg-6">
+            <h2>Enjoy on your TV.</h2>
+            <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+          </div>
+          <div class="col-lg-6">
+           <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <img src="https://occ-0-4994-2186.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABYjXrxZKtrzxQRVQNn2aIByoomnlbXmJ-uBy7du8a5Si3xqIsgerTlwJZG1vMpqer2kvcILy0UJQnjfRUQ5cEr7gQlYqXfxUg7bz.png?r=420">
+          </div>
+          <div class="col-lg-6">
+            <h2>Download your shows to watch offline.</h2>
+            <p>Save your favourites easily and always have something to watch.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="faq">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2 class="mb-5">Frequently Asked Questions</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-2 col-1"></div>
+          <div class="col-lg-6 col-md-8 col-10 p-0">
+            <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample1">What is Netflix?</a>
+        <div class="collapse multi-collapse" id="multiCollapseExample1">
+          <div class="card card-body">
+            Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices. <br><br>
+            You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!
+          </div>
+        </div>
+         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample2" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample2">Where can I watch?</a>
+        <div class="collapse multi-collapse" id="multiCollapseExample2">
+          <div class="card card-body">
+            Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+          </div>
+        </div>
+         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample3">How do I cancel?</a>
+        <div class="collapse multi-collapse" id="multiCollapseExample3">
+          <div class="card card-body">
+           Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.
+          </div>
+        </div>
+         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample4">What can I watch on Netflix?</a>
+        <div class="collapse multi-collapse" id="multiCollapseExample4">
+          <div class="card card-body">
+            Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
+          </div>
+        </div>
+         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample5" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample5">Is Netflix good for kids?</a>
+        <div class="collapse multi-collapse" id="multiCollapseExample5">
+          <div class="card card-body">
+           The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space. <br><br>
+            Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.
+          </div>
+        </div>
+          </div>
+          <div class="col-lg-3 col-md-2 col-1"></div>
+        </div>
+        
+      </div>
+    </section>
+    <section>
+      <div class="bottom-search">
+        <p class="text-center">Ready to watch? Enter your email to create or restart your membership.</p>
+           <div class="row">
+          <div class="col-md-2 col-1"></div>
+          <div class="col-md-8 col-10 p-0 main-search">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="Email address">
+              <span class="input-group-text" id="basic-addon2">Get Started <i class="bi bi-chevron-right text-white"></i></span>
+            </div>
+          </div>
+          <div class="col-md-2 col-1"></div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+       <ul>
+         <li class="ps-2 pb-3">Questions? Call <a href="#"> 000-800-040-1843</a></a></li>
+       </ul>
+        <div class="row">
+          <div class="col-md-3 col-6">
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Investor Relations</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Speed Test</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-6">
+            <ul>
+              <li>An active item</a></li>
+              <li><a href="#">Help Centre</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Cookie Preferences</a></li>
+              <li><a href="#">Legal Notices</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-6">
+            <ul>
+              <li><a href="#">Account</a></li>
+              <li><a href="#">Ways to Watch</a></li>
+              <li><a href="#">Corporate Information</a></li>
+              <li><a href="#">Netflix Originals</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-6">
+            <ul>
+              <li><a href="#">Media Centre</a></li>
+              <li><a href="#">Terms of Use</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row ps-4 pb-4">
+          <div class="col-lg-2 col-md-4 col-6">
+            <select class="form-select" aria-label="Default select example">
+              <option selected class="text-white">English</option>
+              <option value="1" class="text-white">Español</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+  </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!doctype html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
-
+<link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">
+    
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Font+Name">
-    <!--got this link from netflix original page-->
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
@@ -68,7 +302,7 @@
                 <img class="content-img" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg"
                     alt="img not found">
             </div>
-            <div class="col-7">
+            <div class="col-7 info-div">
                 <h1>Download your shows to watch offline.</h1>
                 <p>Save your favourites easily and always have something to watch.</p>
             </div>
@@ -106,8 +340,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
-<!-- for local js file (not js used but for better practice) -->
 <script src="script.js"></script>
 </body>
 
-</html>
+</html>-->
