just class created

--- a/netfilix-homepage/index.html
+++ b/netfilix-homepage/index.html
@@ -56,8 +56,8 @@
       <div class="container">
         <div class="row align-items-center reverse">
           <div class="col-lg-6">
-            <h2>Enjoy on your TV.</h2>
-            <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+            <h2 class="sec-h2">Enjoy on your TV.</h2>
+            <p class="sec-p">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
           </div>
           <div class="col-lg-6">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png">
