page completed responsive remains

--- a/netfilix-homepage/index.html
+++ b/netfilix-homepage/index.html
@@ -24,13 +24,15 @@
         <a href="#" class="navbar-brand">Netflix</a>
         <form class="d-flex">
           <select class="form-select-menu mx-4 text-white" aria-label="Default select example">
-            <option selected value="english">English</option>
-            <option value="hindi">हिंदी</option>
+            <option selected value="english">&nbsp;English</span></option>
+            <option value="hindi">&nbsp;हिंदी</option>
           </select>
+          <i class="fa-solid fa-globe"></i>
           <button type="button" class="btn btn-danger top-sign-in">Sign In</button>
         </form>
       </div>
     </nav>
+      <!-- header search section -->
     <div class="bg-img">
       <div class="layer">
         <div class="row">
@@ -40,18 +42,20 @@
             <h5 class="headerTitleThree">Ready to watch? Enter your email to create or restart your membership.</h5>
           </div>
         </div>
+        <!-- header search btn -->
         <div class="row w-100">
           <div class="col-md-2 col-1"></div>
           <div class="col-md-8 col-10 p-0 main-search">
             <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Email address">
-              <span class="input-group-text" id="basic-addon2">Get Started <i class="bi bi-chevron-right text-white"></i></span>
+              <span class="input-group-text" id="basic-addon2">Get Started &nbsp; <i class="bi bi-chevron-right text-white"></i></span>
             </div>
           </div>
           <div class="col-md-2 col-1"></div>
         </div>
       </div>
     </div>
+    <!-- content section 1 -->
     <section>
       <div class="container">
         <div class="row align-items-center reverse">
@@ -65,6 +69,7 @@
         </div>
       </div>
     </section>
+    <!-- content section 2 -->
     <section>
       <div class="container">
         <div class="row align-items-center ">
@@ -72,18 +77,19 @@
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg">
           </div>
           <div class="col-lg-6">
-            <h2>Download your shows to watch offline.</h2>
-            <p>Save your favourites easily and always have something to watch.</p>
+            <h2 class="sec-h2">Download your shows to watch offline.</h2>
+            <p class="sec-p">Save your favourites easily and always have something to watch.</p>
           </div>
         </div>
       </div>
     </section>
+    <!-- content section 3 -->
     <section>
       <div class="container">
         <div class="row align-items-center reverse">
           <div class="col-lg-6">
-            <h2>Enjoy on your TV.</h2>
-            <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+            <h2 class="sec-h2">Enjoy on your TV.</h2>
+            <p class="sec-p">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
           </div>
           <div class="col-lg-6">
            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png">
@@ -91,6 +97,7 @@
         </div>
       </div>
     </section>
+    <!-- content section 4 -->
     <section>
       <div class="container">
         <div class="row align-items-center">
@@ -98,17 +105,19 @@
             <img src="https://occ-0-4994-2186.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABYjXrxZKtrzxQRVQNn2aIByoomnlbXmJ-uBy7du8a5Si3xqIsgerTlwJZG1vMpqer2kvcILy0UJQnjfRUQ5cEr7gQlYqXfxUg7bz.png?r=420">
           </div>
           <div class="col-lg-6">
-            <h2>Download your shows to watch offline.</h2>
-            <p>Save your favourites easily and always have something to watch.</p>
+            <h2 class="sec-h2">Download your shows to watch offline.</h2>
+            <p class="sec-p">Save your favourites easily and always have something to watch.</p>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- faq section -->
     <section>
       <div class="faq">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="mb-5">Frequently Asked Questions</h2>
+            <h2 class="faq-h2 mb-5">Frequently Asked Questions</h2>
           </div>
         </div>
         <div class="row">
@@ -151,73 +160,71 @@
         </div>
         
       </div>
-    </section>
-    <section>
+
+      <!-- bottom search part -->
       <div class="bottom-search">
-        <p class="text-center">Ready to watch? Enter your email to create or restart your membership.</p>
+        <p class="text-center bottomSearchPara ">Ready to watch? Enter your email to create or restart your membership.</p>
            <div class="row">
           <div class="col-md-2 col-1"></div>
           <div class="col-md-8 col-10 p-0 main-search">
             <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Email address">
-              <span class="input-group-text" id="basic-addon2">Get Started <i class="bi bi-chevron-right text-white"></i></span>
+              <span class="input-group-text" id="basic-addon2">Get Started &nbsp;<i class="bi bi-chevron-right text-white"></i></span>
             </div>
           </div>
           <div class="col-md-2 col-1"></div>
         </div>
       </div>
     </section>
+
+    <!-- footer  -->
     <footer>
       <div class="container">
        <ul>
-         <li class="ps-2 pb-3">Questions? Call <a href="#"> 000-800-040-1843</a></a></li>
+         <li class="footerCall ps-2 pb-3">Questions? Call <a href="#"> 000-800-919-1694</a></a></li>
        </ul>
         <div class="row">
-          <div class="col-md-3 col-6">
+          <div class="col-md-3 col-4">
             <ul>
               <li><a href="#">FAQ</a></li>
-              <li><a href="#">Investor Relations</a></li>
-              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Media Centre</a></li>
+              <li><a href="#">Ways to Watch</a></li>
+              <li><a href="#">Cookie Preferences</a></li>
               <li><a href="#">Speed Test</a></li>
             </ul>
           </div>
-          <div class="col-md-3 col-6">
+          <div class="col-md-3 col-4">
             <ul>
-              <li>An active item</a></li>
               <li><a href="#">Help Centre</a></li>
-              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Investor Relations</a></li>
+              <li><a href="#">Terms of Use</a></li>
               <li><a href="#">Cookie Preferences</a></li>
               <li><a href="#">Legal Notices</a></li>
             </ul>
           </div>
-          <div class="col-md-3 col-6">
+          <div class="col-md-3 col-4">
             <ul>
               <li><a href="#">Account</a></li>
-              <li><a href="#">Ways to Watch</a></li>
-              <li><a href="#">Corporate Information</a></li>
-              <li><a href="#">Netflix Originals</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3 col-6">
-            <ul>
-              <li><a href="#">Media Centre</a></li>
-              <li><a href="#">Terms of Use</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Privacy</a></li>
               <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Only on Netflix</a></li>
             </ul>
           </div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row ps-4 pb-4">
-          <div class="col-lg-2 col-md-4 col-6">
-            <select class="form-select" aria-label="Default select example">
-              <option selected class="text-white">English</option>
-              <option value="1" class="text-white">Español</option>
-            </select>
+          <!-- footer dropdown -->
+          <div class="row pb-4 footerDropdown">
+            <div class="col-lg-2 col-md-4 col-6">
+              <select class="form-select-menu2 mx-4 text-white" aria-label="Default select example">
+                <option selected value="english">&nbsp;English</span></option>
+                <option value="hindi">&nbsp;हिंदी</option>
+              </select>
+            </div>
           </div>
+          
+          <!-- credits -->
+          <p class="footerCredits">Netflix India</p>
         </div>
-      </div>
+      </div>    
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
