almost done header responsiveness left

--- a/netfilix-homepage/index.html
+++ b/netfilix-homepage/index.html
@@ -21,7 +21,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-light p-0">
       <div class="container-fluid px-5">
-        <a href="#" class="navbar-brand">Netflix</a>
+        <a href="#" class="navbar-brand"> <img class="nav-logo" src="/images/logo.png" alt="Netflix"> </a>
         <form class="d-flex">
           <select class="form-select-menu mx-4 text-white" aria-label="Default select example">
             <option selected value="english">&nbsp;English</span></option>
@@ -58,13 +58,13 @@
     <!-- content section 1 -->
     <section>
       <div class="container">
-        <div class="row align-items-center reverse">
+        <div class="row align-items-center textCenter768">
           <div class="col-lg-6">
             <h2 class="sec-h2">Enjoy on your TV.</h2>
             <p class="sec-p">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
           </div>
           <div class="col-lg-6">
-            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png">
+            <img class="story-card-img" src="/images/content1.png">
           </div>
         </div>
       </div>
@@ -72,9 +72,9 @@
     <!-- content section 2 -->
     <section>
       <div class="container">
-        <div class="row align-items-center ">
+        <div class="row align-items-center reverse textCenter768">
           <div class="col-lg-6">
-            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg">
+            <img src="/images/content2.jpg">
           </div>
           <div class="col-lg-6">
             <h2 class="sec-h2">Download your shows to watch offline.</h2>
@@ -86,13 +86,13 @@
     <!-- content section 3 -->
     <section>
       <div class="container">
-        <div class="row align-items-center reverse">
+        <div class="row align-items-center textCenter768">
           <div class="col-lg-6">
-            <h2 class="sec-h2">Enjoy on your TV.</h2>
-            <p class="sec-p">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+            <h2 class="sec-h2">Watch everywhere.</h2>
+            <p class="sec-p">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
           </div>
           <div class="col-lg-6">
-           <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png">
+           <img src="/images/content3.png">
           </div>
         </div>
       </div>
@@ -100,13 +100,13 @@
     <!-- content section 4 -->
     <section>
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center reverse textCenter768">
           <div class="col-lg-6">
             <img src="https://occ-0-4994-2186.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABYjXrxZKtrzxQRVQNn2aIByoomnlbXmJ-uBy7du8a5Si3xqIsgerTlwJZG1vMpqer2kvcILy0UJQnjfRUQ5cEr7gQlYqXfxUg7bz.png?r=420">
           </div>
           <div class="col-lg-6">
-            <h2 class="sec-h2">Download your shows to watch offline.</h2>
-            <p class="sec-p">Save your favourites easily and always have something to watch.</p>
+            <h2 class="sec-h2">Create profile for children.</h2>
+            <p class="sec-p">Send children on adventures with their favorite characters in a space made just for them-freew with your membership.</p>
           </div>
         </div>
       </div>
@@ -123,32 +123,32 @@
         <div class="row">
           <div class="col-lg-3 col-md-2 col-1"></div>
           <div class="col-lg-6 col-md-8 col-10 p-0">
-            <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample1">What is Netflix?</a>
+            <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample1">What is Netflix? <img class="plusIcon" src="/images/icon.png"></a>
         <div class="collapse multi-collapse" id="multiCollapseExample1">
           <div class="card card-body">
             Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices. <br><br>
             You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!
           </div>
         </div>
-         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample2" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample2">Where can I watch?</a>
+         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample2" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample2">Where can I watch? <img class="plusIcon" src="/images/icon.png"></a></a>
         <div class="collapse multi-collapse" id="multiCollapseExample2">
           <div class="card card-body">
             Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
           </div>
         </div>
-         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample3">How do I cancel?</a>
+         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample3">How do I cancel? <img class="plusIcon" src="/images/icon.png"></a></a>
         <div class="collapse multi-collapse" id="multiCollapseExample3">
           <div class="card card-body">
            Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.
           </div>
         </div>
-         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample4">What can I watch on Netflix?</a>
+         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample4">What can I watch on Netflix? <img class="plusIcon" src="/images/icon.png"></a></a>
         <div class="collapse multi-collapse" id="multiCollapseExample4">
           <div class="card card-body">
             Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
           </div>
         </div>
-         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample5" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample5">Is Netflix good for kids?</a>
+         <a class="btn text-white" data-bs-toggle="collapse" href="#multiCollapseExample5" role="button" aria-expanded="false" aria-controls autoplay="multiCollapseExample5">Is Netflix good for kids? <img class="plusIcon" src="/images/icon.png"></a></a>
         <div class="collapse multi-collapse" id="multiCollapseExample5">
           <div class="card card-body">
            The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space. <br><br>
@@ -179,7 +179,7 @@
 
     <!-- footer  -->
     <footer>
-      <div class="container">
+      <div class="container footerContainer">
        <ul>
          <li class="footerCall ps-2 pb-3">Questions? Call <a href="#"> 000-800-919-1694</a></a></li>
        </ul>
