--- a/filter-result/index.html
+++ b/filter-result/index.html
@@ -9,10 +9,9 @@
     <!--  -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Food Services</title>
+    <title>Zomato</title>
     <!--  -->
-    <link rel="icon" type="image/png" href="/images/favicon.png">
-    <!--  -->
+    <link rel="icon" type="image/png" href="https://b.zmtcdn.com/images/logo/zomato_logo_2017.png">    <!--  -->
 
     <!--  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -29,7 +28,7 @@
     <!-- nav started -->
     <nav class="navbar">
         <div class="container">
-            <a class="navbar-brand">FS</a>
+            <a class="navbar-brand">Z</a>
             <form class="d-flex" role="search">
                 <button class="btn login-btn" type="submit">Login</button>
                 <button class="btn sign-up-btn" type="submit">Create an account</button>
