api called and data showed some code reamains

--- a/wheather-app/index.html
+++ b/wheather-app/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wheather App</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container"></div>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <div class="bg">
+      <div class="layer">
+        <div class="card">
+          <input type="text" id="locationInput" required/>
+          <button id="btnId">&#x1F50E;&#xFE0E;</button>
+            <div class="dataSec">
+                <h1 id="locationHead">Wheather in ?</h1>
+                <h1 id="temp">?&#176; C</h1>
+
+                <p id="skyData">?</p>
+                <p id="humidity">?</p>
+                <p id="windSpeed">?</p>
+            </div>
+        </div>
+      </div>
+    </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
