--- a/wheather-app/index.html
+++ b/wheather-app/index.html
@@ -17,10 +17,14 @@
             <div class="dataSec">
                 <h1 id="locationHead">Wheather in ?</h1>
                 <h1 id="temp">?&#176; C</h1>
-
-                <p id="skyData">?</p>
-                <p id="humidity">?</p>
-                <p id="windSpeed">?</p>
+                <div>
+                    <div class="imgPInline">
+                        <img id="imgIcon" src="http://openweathermap.org/img/wn/13n@2x.png">
+                        <p id="skyData">?</p>
+                    </div>
+                    <p id="humidity">?</p>
+                    <p id="windSpeed">?</p>
+                </div>
             </div>
         </div>
       </div>
